<resources>
    <string name="app_name">Insta Porters</string>
    <string name="enter_name">Enter your name</string>
    <string name="action_settings">Settings</string>
    <string name="login_placeholder">Account Number</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="listview_title_offers">New job offers</string>
    <string name="google_app_id" translatable="false">AIzaSyDwYfFmyMhVd5e9LOsvSkuOgewd2WEztFg</string>
    <string name="number_hint_placeholder">Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="navigation">Navigation</string>
    <string name="swipeleft">Swipe Left to reject</string>
    <string name="swiperight">Swipe Right to accept</string>
    <string name="gotit">Got it!</string>
    <string name="startnow">Start Now</string>
    <string name="searchmore">Search more jobs!</string>
    <string name="thankyou">Thank you!\nYou have successfully finished your job.</string>
    <string name="new_job_offers">New Job offers</string>
    <string name="job_rejeected">Job rejected</string>
    <string name="undo">UNDO</string>
    <string name="job_restored">Job is restored!</string>
    <string name="job_is_yours">This job is yours!</string>
    <string name="no_internet">No internet Access, Check your internet connection.</string>
    <string name="start_track">We started the tracking</string>
    <string name="finished_the_job">Congratulation! you finished the job</string>
    <string name="no_maps_sorry">No maps sorry</string>
    <string name="stop_now">Stop now</string>
    <string name="unload_goods">Unload goods</string>
    <string name="id_mandatory">Porter Id is mandatory!</string>
</resources>
